--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git"
   },
   "author": "humayuntanwar",
+  "engines": {
+    "node": "8.11.3"
+  },
   "dependencies": {
     "aws-sdk": "^2.83.0",
     "body-parser": "^1.15.2",
